--- a/magisterska.tex
+++ b/magisterska.tex
@@ -895,7 +895,7 @@ $$
 $$
 wtedy
 $$
-\forall_{i \in \set{1, \ldots, r-k}} \: \sigma_i(\mathbb{X}-\mathbb{B}_k)\geq \sigma_{k+1}(\mathbb{X}).
+\forall_{i \in \set{1, \ldots, r-k}} \: \sigma_i(\mathbb{X}-\mathbb{B}_k)\geq \sigma_{i+k}(\mathbb{X}).
 $$
 Stąd
 $$
