--- a/magisterska.tex
+++ b/magisterska.tex
@@ -790,7 +790,7 @@ $$
 
 Aby udowodnić twierdzenie Eckart - Younga wprowadźmy twierdzenie Weylsa:
 
-\begin{tw}[Twierdzenie Weylsa {\citep[Tw. 4.17]{tsvdalra}}]
+\begin{tw}[Twierdzenie Weylsa {\citep{wayls}}]
 Niech $\mathbb{X}, \mathbb{Y} \in \mathbb{M}_{m \times n}(\setK)$.
 Dodatkowo niech odpowiednio $\sigma_1(\mathbb{X}) \geq \sigma_2(\mathbb{X})\geq \ldots \geq \sigma_r(\mathbb{X})\geq 0$, $\sigma_1(\mathbb{Y}) \geq \sigma_2(\mathbb{Y})\geq \ldots \geq \sigma_r(\mathbb{Y})\geq 0$ i~$\sigma_1(\mathbb{Z}) \geq \sigma_2(\mathbb{Z})\geq \ldots \geq \sigma_r(\mathbb{Z})\geq 0$ będą kolejnymi wartościami osobliwymi macierzy $\mathbb{X}, \mathbb{Y}, \: \mathbb{Z}=\mathbb{X} + \mathbb{Y}$. Wtedy:
 $$
